# grammer-guide

./: .gitignore  README.md  docs.md  pyproject.toml
.github/workflows/: deploy-pages.yml
data/: grammar_check_steps.yaml  grammar_conditionals.yaml  grammar_confusions.yaml  grammar_decision_table.yaml  grammar_forms.yaml  grammar_modal_perfects.yaml  grammar_modals.yaml  grammar_sections.yaml  grammar_tenses.yaml  grammar_toeic_patterns.yaml
notebooks/: grammar_guide.ipynb
scripts/: build_site.py  export_notebook.py
src/grammar_guide/: __init__.py  build_site.py  constants.py  load_data.py  models.py  render_cards.py  render_tables.py  render_timeline.py
src/grammer_guide/: __init__.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html.j2  section.html.j2
templates/components/: note_box.html.j2  pattern_card.html.j2  table.html.j2  timeline.html.j2
